[gd_scene load_steps=2 format=3 uid="uid://nshi4fwwwnmc"]

[ext_resource type="Script" path="res://scripts/game_over_menu.gd" id="1_60dlb"]

[node name="Game Over Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_60dlb")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_top = 1.0
offset_right = 96.0
offset_bottom = 27.0
scale = Vector2(1.09501, 1)
text = "Game Over!"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_top = 26.0
offset_right = 96.0
offset_bottom = 92.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Stats" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "View Stats"

[node name="Menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back To Hub"

[node name="Confirm" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 12.0
offset_top = 94.0
offset_right = 118.0
offset_bottom = 120.0
scale = Vector2(0.652213, 0.652213)
text = "Are you Sure?"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 27.0
offset_top = 112.0
offset_right = 97.0
offset_bottom = 143.0
scale = Vector2(0.575, 0.575)
size_flags_horizontal = 4

[node name="Yes" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Yes"

[node name="No" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "No"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Stats" to="." method="_on_stats_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="HBoxContainer/No" to="." method="_on_no_pressed"]
